Fix misalignment on repeat reservation date picker

--- a/app/shared/date-picker/_date-picker.scss
+++ b/app/shared/date-picker/_date-picker.scss
@@ -24,7 +24,8 @@
     position: absolute;
     z-index: 100;
     border: solid 2px $brand-primary;;
-    padding: 20px;
+    padding: 12px;
+    padding-bottom: 0;
   }
 
   .DayPicker {
