--- a/app/shared/recurring-reservation-controls/_recurring-reservation-controls.scss
+++ b/app/shared/recurring-reservation-controls/_recurring-reservation-controls.scss
@@ -6,4 +6,9 @@
     white-space: nowrap;
     overflow: hidden;
   }
+  .date-picker input {
+    width: 294px;
+    padding: 5px;
+    border: 1px solid #000000;
+  }
 }
