--- a/app/shared/reservation-confirmation/_confirm-reservation-modal.scss
+++ b/app/shared/reservation-confirmation/_confirm-reservation-modal.scss
@@ -1,7 +1,7 @@
 .app-ConfirmReservationModal {
   .modal-dialog {
     @media (min-width: $screen-sm-min) {
-      width: 700px;
+      width: 800px;
     }
   }
 
